--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 # This file contains configuration flags to customize your site
 #
 
-# Name of your site (displayed in the header)
-name: Your Name
+# you are up and running
+name: pinchin222
 
 # Short bio or description (displayed in the header)
 description: Web Developer from Somewhere
